# llava

./: .gitignore  README.md  merge.py  pyproject.toml
datasets/: stage1_data.yaml  stage2_coco_data.yaml  stage2_data.yaml  stage2_ov_data.yaml
llava/: constants.py  conversation.py
llava/data/: __init__.py  sampler.py  utils.py
llava/engine/: __init__.py  trainer.py
llava/models/: __init__.py  arch.py
llava/models/llm/: __init__.py  deepseek_v3.py  llama.py  mistral.py  mpt.py  qwen2.py
llava/models/mm_encoder/: __init__.py  builder.py  clip_encoder.py
llava/models/mm_projector/: __init__.py  builder.py  pooler_projector.py
llava/models/mm_resampler/: __init__.py  builder.py  masked_drop.py  perceiver.py  qformer.py  spatial_pool.py
llava/models/multimodal_encoder/: builder.py  clip_encoder.py
llava/models/multimodal_projector/: __init__.py  builder.py
llava/utils/: __init__.py  checkpoint.py  conversation.py  events.py  ops.py  torch_utils.py
tools/: finetune.sh  pretrain.sh  stage1_5_finetune.sh  stage1_pretrain.sh  stage1_pretrain_lora.sh  stage2_finetune.sh  stage2_finetune_lora.sh  stage2_finetune_ov.sh  stage2_finetune_si.sh  train.py  zero2.json  zero2_fused_adamw.json  zero3.json  zero3pp.json
tools/dataset_converters/: README.md  convert_meta_to_pretrain.py  convert_webdataset_to_meta.py  generate_blip_caption_to_meta_json.py  generate_meta_json_from_webdataset.py
tools/eval/: README.md  convert_vqav2_to_jsonl.py  eval_vqa_model.py
tools/finetune/: llava-qwen1.5_0.5b_chat-clip_vit_base_patch32-llava_instruct_80k.sh  llava-qwen1.5_0.5b_chat-clip_vit_base_patch32-llava_v1_5_mix665k.sh  llava-tiny_vicuna_1b-clip_vit_large_patch14_336-llava_v1_5_mix665k.sh  llava-vicuna_13b_v1.5-clip_vit_large_patch14_336-llava_v1_5_mix665k.sh
tools/llava_serve/: cli.py  controller.py  gradio_web_server.py  model_worker.py
tools/misc/: convert_llava_to_hf.py  merge_lora_weights.py  save_llavaprocesser.py
tools/pretrain/: llava-qwen1.5_0.5b_chat-clip_vit_base_patch32-blip_laion_cc_sbu_558k.sh  llava-tiny_vicuna_1b-clip_vit_large_patch14_336-blip_laion_cc_sbu_558k.sh  llava-vicuna_13b_v1.5-clip_vit_large_patch14_336-blip_laion_cc_sbu_558k.sh
tools/serve/: cli.py  controller.py  gradio_web_server.py  llava_app.py  llava_qwen_app.py  model_worker.py
